# backend_typescript_service/src/routes/routes.ts
@@ -38,8 +38,8 @@ const models: TsoaRoute.Models = {
             "status": {"ref":"TodoStatus","default":"BACKLOG"},
             "duration": {"dataType":"string"},
             "due_date": {"dataType":"datetime"},
-            "created_at": {"dataType":"datetime","default":"2026-02-16T09:06:39.031Z"},
-            "updated_at": {"dataType":"datetime","default":"2026-02-16T09:06:39.032Z"},
+            "created_at": {"dataType":"datetime","default":"2026-03-26T18:13:11.586Z"},
+            "updated_at": {"dataType":"datetime","default":"2026-03-26T18:13:11.587Z"},
             "user": {"dataType":"nestedObjectLiteral","nestedProperties":{"$ref":{"dataType":"string","required":true},"$id":{"ref":"ObjectId","required":true}},"required":true},
         },
         "additionalProperties": false,
